# borgerlang

./: .gitignore  CMakeLists.txt  README.md
include/: codegen.h  node.h
src/: codegen.cpp  corefuncs.cpp  main.cpp  parser.y  tokens.l
